# NOCS-Pytorch

./: .gitignore  README.md  pyproject.toml
nocs/: NOCS.py  coco.py  dataset.py  loss.py  model.py  model_vit.py  utils.py  visualize.py
scripts/: demo.py  demo_eval.py  train.py  train_test.py  train_vit.py
