[project]
name = "nocs"
version = "0.1.0"
description = "NOCS-Pytorch implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.23.5",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib",
    "opencv-python",
    "scipy",
    "scikit-image",
    "pycocotools",
    "tqdm"
]

[tool.uv.sources]
torch       = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nocs"]
exclude = ["data", "logs"]